force-app/main/default/objects/Object_Encrypted_Data_Field__mdt/Object_Encrypted_Data_Field__mdt.object-meta.xml
<CustomObject>
    <label>Object Encrypted Data Field</label>
    <pluralLabel>Object Encrypted Data Fields</pluralLabel>
</CustomObject>