force-app/main/default/objects/Object_Encrypted_Data_Field__mdt/fields/Hashed_Data_Field__c.field-meta.xml
<CustomField>
    <fullName>Hashed_Data_Field__c</fullName>
    <label>Hashed Data Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>