force-app/main/default/objects/Object_Encrypted_Data_Field__mdt/fields/Mask_Char__c.field-meta.xml
<CustomField>
    <fullName>Mask_Char__c</fullName>
    <label>Mask Char</label>
    <length>2</length>
    <type>Text</type>
</CustomField>