force-app/main/default/objects/Object_Encrypted_Data_Field__mdt/fields/Mask_Type__c.field-meta.xml
<CustomField>
    <fullName>Mask_Type__c</fullName>
    <label>Mask Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>