force-app/main/default/objects/Object_Encrypted_Data_Field__mdt/fields/Original_Data_Field__c.field-meta.xml
<CustomField>
    <fullName>Original_Data_Field__c</fullName>
    <label>Original Data Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>